# fastapi-sandbox

./: .editorconfig  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile.backend.dev
src/: main.py  models.py
