[project]
name = "django-auth0-experiments"
version = "0.1.0"
description = "This project demonstrates Auth0 integration in Django."
authors = [
    {name = "nicomiguelino",email = "nicomiguelino2014@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.115.11",
    "sqlmodel==0.0.24",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
